icons = [
  'down.png', 'full-letter.png', 'full-punct.png', 'half-letter.png',
  'half-punct.png', 'help.png', 'keyboard.png', 'left.png', 'menu.png',
  'pin-down.png', 'pin-up.png', 'rawcode.png', 'right.png',
  'sctc-sc-to-tc.png', 'sctc-tc-to-sc.png', 'sctc.png', 'setup.png',
  'trademark.png', 'up.png'
]
install_data(icons, install_dir : scim_icondir)
